--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <DIV class="main">
     <div class="navbar">  
-    <img src="./logo.png"class="logo">
+    <img src="images/logo.png"class="logo">
     <a href="#" class="name"><span>A</span>rpita</a>
 
     <ul class="nav-item">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="image">
-    <img src="InShot_20250508_212352203.png" class="arpita">
+    <img src="images/InShot_20250508_212352203.png" class="arpita">
     </div>
     
 </DIV>
@@ -49,7 +49,7 @@
     I specialize in HTML,CSS ,JAVASCRIPT,and modern frameworks like bootstrap. My goal is to built responsive,accesible,and perfect web experiences that deliever value to user & clients. I enjoy transforming Complex problems into Simple,beautifull interfaces.I'm constantly learning new technologies and improve my craft with Every project i built.
 </div>
 </p>
-    <img src="./1727963046161 (1).jpg"  class="profile">
+    <img src="images/1727963046161 (1).jpg"  class="profile">
 
 </div>
 </div>
@@ -71,8 +71,8 @@
             <a href="#">View Project</a>
 
           <div class="caffe">
-            <img src="./WhatsApp Image 2025-05-11 at 11.38.13 AM.jpeg" height="90px">
-            <img src="./WhatsApp Image 2025-05-11 at 11.38.14 AM.jpeg " height="90px">
+            <img src="images/WhatsApp Image 2025-05-11 at 11.38.13 AM.jpeg" height="90px">
+            <img src="images/WhatsApp Image 2025-05-11 at 11.38.14 AM.jpeg " height="90px">
           </div>
         </div>
 
